Revert "fix modal design bug on mobile devices"
This reverts commit f895a6a3003e181c793a21079b9b06edd5231840.

--- a/src/Components/Common/Modal/Modal.scss
+++ b/src/Components/Common/Modal/Modal.scss
@@ -6,7 +6,7 @@
   position: absolute;
   top: 0;
   width: 100%;
-  height: calc(100% + 30px);
+  height: 100%;
   background-color: rgba(0, 0, 0, 0.75);
   &__container {
     display: flex;
